--- a/{{cookiecutter.app_name}}/tox.ini
+++ b/{{cookiecutter.app_name}}/tox.ini
@@ -5,7 +5,7 @@ envlist =
 [testenv]
 setenv =
     PYTHONPATH = {toxinidir}:{toxinidir}/{{ cookiecutter.app_name }}
-commands = pytest --cov={{ cookiecutter.app_name }}
+commands = pytest --cov={{ cookiecutter.app_name }} --flake8
 deps =
     -r{toxinidir}/requirements_test.txt
 basepython =
