--- a/{{cookiecutter.app_name}}/serverless.yml
+++ b/{{cookiecutter.app_name}}/serverless.yml
@@ -2,7 +2,7 @@ service: {{ cookiecutter.app_name }}
 
 custom:
   wsgi:
-    app: {{ cookiecutter.app_name }}.app
+    app: {{ cookiecutter.app_name }}.wsgi.app
     packRequirements: false
   pythonRequirements:
     dockerizePip: non-linux
