-Add support for gcp app.yaml, augment tests to remove webtest

--- a/{{cookiecutter.app_name}}/Pipfile
+++ b/{{cookiecutter.app_name}}/Pipfile
@@ -6,12 +6,11 @@ name = "pypi"
 [packages]
 flask-restplus = "*"
 flask = "*"
+gunicorn = "*"
 
 [dev-packages]
+pytest = "*"
+pytest-black = "*"
 pytest-cov = "*"
 "pytest-flake8" = "*"
 "flake8" = "*"
-flask-webtest = "*"
-
-[requires]
-python_version = "3.6"
