--- a/{{cookiecutter.app_name}}/.travis.yml
+++ b/{{cookiecutter.app_name}}/.travis.yml
@@ -1,11 +1,6 @@
-# Config file for automatic testing at travis-ci.org
-sudo: false  # http://docs.travis-ci.com/user/migrating-from-legacy/
+dist: xenial
 language: python
-env:
-- FLASK_APP={{ cookiecutter.app_name }}/app.py FLASK_DEBUG=1
-python:
-  - 2.7
-  - 3.6
-install:
-  - pip install -r requirements_test.txt
-script: tox
+install: pip install pipenv
+python: 3.7
+script: make test
+sudo: true
